--- a/eosign_mobile_app/pubspec.yaml
+++ b/eosign_mobile_app/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
+  flutter_cupertino_localizations: ^1.0.1
+  flutter_platform_widgets: ^0.32.4
   flutter:
     sdk: flutter
   bloc: ^3.0.0
