--- a/eosign_mobile_app/pubspec.yaml
+++ b/eosign_mobile_app/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   meta: ^1.1.6
   equatable: ^1.0.0
   flutter_svg: ^0.16.1
+  flutter_nfc_kit: ^0.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
