--- a/eosign_mobile_app/pubspec.yaml
+++ b/eosign_mobile_app/pubspec.yaml
@@ -17,16 +17,18 @@ environment:
   sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
-  flutter_cupertino_localizations: ^1.0.1
-  flutter_platform_widgets: ^0.32.4
+  bloc: ^3.0.0
+  crypto: ^2.1.3
+  equatable: ^1.0.0
   flutter:
     sdk: flutter
-  bloc: ^3.0.0
   flutter_bloc: ^3.1.0
-  meta: ^1.1.6
-  equatable: ^1.0.0
+  flutter_cupertino_localizations: ^1.0.1
+  flutter_nfc_kit: ^1.0.0
+  flutter_platform_widgets: ^0.32.4
   flutter_svg: ^0.16.1
-  flutter_nfc_kit: ^0.0.6
+  meta: ^1.1.6
+  tripledes: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
