--- a/eosign_mobile_app/pubspec.yaml
+++ b/eosign_mobile_app/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   bloc: ^3.0.0
   crypto: ^2.1.3
   equatable: ^1.0.0
+  fixnum: ^0.10.11
   flutter:
     sdk: flutter
   flutter_bloc: ^3.1.0
