--- a/eosign_mobile_app/pubspec.yaml
+++ b/eosign_mobile_app/pubspec.yaml
@@ -18,18 +18,15 @@ environment:
 
 dependencies:
   bloc: ^3.0.0
-  crypto: ^2.1.3
+  dmrtd:
+    path: lib/dmrtd
   equatable: ^1.0.0
-  fixnum: ^0.10.11
   flutter:
     sdk: flutter
   flutter_bloc: ^3.1.0
   flutter_cupertino_localizations: ^1.0.1
-  flutter_nfc_kit: ^1.0.0
   flutter_platform_widgets: ^0.32.4
   flutter_svg: ^0.16.1
-  meta: ^1.1.6
-  tripledes: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
