--- a/eosign_mobile_app/lib/dmrtd/pubspec.yaml
+++ b/eosign_mobile_app/lib/dmrtd/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dmrtd
-description: Dart implementation of ICAO 9303 MRTD , created by ZeroPass
+description: Dart implementation of ICAO Doc 9303 MRTD, created by ZeroPass
 
 version: 1.0.0+1
 
@@ -11,6 +11,7 @@ dependencies:
   asn1lib: ^0.6.4
   crypto: ^2.1.3
   fixnum: ^0.10.11
+  logging: ^0.11.4
   meta: ^1.1.6
   tripledes: ^2.1.0
 
