--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,15 +26,16 @@ dependencies:
   flutter:
     sdk: flutter
   bloc: ^3.0.0
-  flutter_bloc: ^3.1.0
+  flutter_bloc: ^3.2.0
   meta: ^1.1.6
-  equatable: ^1.0.0
+  equatable: ^1.1.1
   flutter_svg: ^0.16.1
   flutter_nfc_kit: ^0.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_tags: ^0.4.7
 
 dev_dependencies:
   flutter_test:
