submodules moved to lib file

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "submodules\\flutter_holo_date_picker"]
 	path = submodules\\flutter_holo_date_picker
 	url = https://github.com/kfiross/flutter_holo_date_picker
+[submodule "lib/submodules/flutter_holo_date_picker"]
+	path = lib/submodules/flutter_holo_date_picker
+	url = https://github.com/kfiross/flutter_holo_date_picker
