--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,23 +21,21 @@ environment:
   sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
-  flutter_cupertino_localizations: ^1.0.1
-  flutter_cupertino_date_picker: ^1.0.12
-  flutter_platform_widgets: ^0.32.4
+  bloc: ^3.0.0
+  cupertino_icons: ^0.1.2
+  date_format: ^1.0.8
+  equatable: ^1.1.1
   flutter:
     sdk: flutter
-  bloc: ^3.0.0
   flutter_bloc: ^3.2.0
-  meta: ^1.1.6
-  equatable: ^1.1.1
+  flutter_cupertino_localizations: ^1.0.1
+  flutter_cupertino_date_picker: ^1.0.12
+  flutter_holo_date_picker:
+    git: 'https://github.com/kfiross/flutter_holo_date_picker.git'
+  flutter_platform_widgets: ^0.32.4
   flutter_svg: ^0.16.1
-  flutter_nfc_kit: ^0.0.6
-  date_format: ^1.0.8
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
   flutter_tags: ^0.4.7
+  meta: ^1.1.6
 
 dev_dependencies:
   flutter_test:
