--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,32 @@
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
 .DS_Store
-.dart_tool/
+.atom/
+.buildlog/
+.history
+.svn/
 
-.packages
-.pub/
-
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
 .idea/
 .vagrant/
 .sconsign.dblite
 .svn/
 
-*.swp
+# The .vscode folder contains launch configuration and tasks you configure in
+# VS Code which you may wish to be included in version control, so this line
+# is commented out by default.
+.vscode/
+
+
 profile
-
 DerivedData/
-
 .generated/
-
 *.pbxuser
 *.mode1v3
 *.mode2v3
@@ -27,16 +38,32 @@ DerivedData/
 !default.perspectivev3
 
 xcuserdata
-
 *.moved-aside
-
 *.pyc
 *sync/
 Icon?
 .tags*
 
-build/
+# Flutter/Dart/Pub related
+**/doc/api/
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+/build/
+
 .android/
 .ios/
 .flutter-plugins
 .flutter-plugins-dependencies
+
+# Web related
+lib/generated_plugin_registrant.dart
+
+# Exceptions to above rules.
+!/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# macOS
+._*
