--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter_cupertino_localizations: ^1.0.1
   flutter_cupertino_date_picker: ^1.0.12
+  shared_preferences_settings: ^1.2.0
   flutter_platform_widgets: ^0.32.4
   flutter:
     sdk: flutter
