--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,13 +26,19 @@ dependencies:
   date_format: ^1.0.8
   dmrtd:
     path: lib/dmrtd
+  flare_flutter: ^2.0.1
+  passid:
+    path: ../../passid
+
   equatable: ^1.1.1
+  connectivity: ^0.4.8+2
   #shared_preferences_settings: ^1.2.0
   card_settings: ^1.8.0
   flutter:
     sdk: flutter
   flutter_bloc: ^3.2.0
   #flutter_cupertino_localizations: ^1.0.1
+  shared_preferences: ^0.5.6+3
   flutter_cupertino_date_picker: ^1.0.12
   flutter_holo_date_picker:
     git: 'https://github.com/kfiross/flutter_holo_date_picker.git'
@@ -40,6 +46,7 @@ dependencies:
   flutter_svg: ^0.16.1
   flutter_tags: ^0.4.7
   meta: ^1.1.6
+
 
 dev_dependencies:
   flutter_test:
@@ -86,6 +93,28 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 
+  assets:
+    - assets/anim/success_check.flr
+    - assets/anim/nfc.flr
+    - assets/certs/passid_srv.cer
+    - assets/images/mountains.jpg
+    - assets/images/passid.png
+
+  # An image asset can refer to one or more resolution-specific "variants", see
+  # https://flutter.dev/assets-and-images/#resolution-aware.
+
+  # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/assets-and-images/#from-packages
+
+  # To add custom fonts to your application, add a fonts section here,
+  # in this "flutter" section. Each entry in this list should have a
+  # "family" key with the font family name, and a "fonts" key with a
+  # list giving the asset and other descriptors for the font. For
+
+  fonts:
+    - family: icomoon
+      fonts:
+        - asset: assets/fonts/IcoMoon.ttf
 
   # This section identifies your Flutter project as a module meant for
   # embedding in a native host app.  These identifiers should _not_ ordinarily
