--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,10 @@ dependencies:
   #flutter_cupertino_localizations: ^1.0.1
   shared_preferences: ^0.5.6+3
   flutter_cupertino_date_picker: ^1.0.12
-  flutter_holo_date_picker:
-    git: 'https://github.com/kfiross/flutter_holo_date_picker.git'
+  #flutter_holo_date_picker:
+  #  git: 'https://github.com/kfiross/flutter_holo_date_picker.git'
   flutter_platform_widgets: ^0.32.4
-  flutter_svg: ^0.16.1
+  flutter_svg: ^0.17.4
   flutter_tags: ^0.4.7
   meta: ^1.1.6
 
