--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   bloc: ^4.0.0
   card_settings: ^1.8.2
+  device_preview: ^0.4.5
   connectivity: ^0.4.8+5
   cupertino_icons: ^0.1.3
   dart_countries_states: ^0.0.8
