--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_svg: ^0.17.4
   flutter_tags: ^0.4.8
   json_serializable: ^3.3.0
+  cupertino_list_tile: ^0.1.2
   meta: ^1.1.8
   passid:
     path: lib/passid
