--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   card_settings: ^1.9.3
   device_preview: ^0.4.5
   connectivity: ^0.4.8+5
+  data_connection_checker: ^0.3.4
   cupertino_icons: ^0.1.3
   dart_countries_states: ^0.0.8
   date_format: ^1.0.8
