--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ environment:
 
 dependencies:
   bloc: ^4.0.0
-  card_settings: ^1.9.3
+  card_settings: ^1.13.0+hotfix.1
   device_preview: ^0.4.5
   connectivity: ^0.4.8+5
   data_connection_checker: ^0.3.4
