--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,13 @@ environment:
   sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
+  #flutter_nfc_reader:
+  #  git:
+  #    url: git://github.com/matteocrippa/flutter-nfc-reader.git
+  #    ref: master
   bloc: ^4.0.0
   card_settings: ^1.13.0+hotfix.1
+  dots_indicator: ^1.2.0
   device_preview: ^0.4.5
   connectivity: ^0.4.8+5
   data_connection_checker: ^0.3.4
