--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   card_settings: ^1.13.0+hotfix.1
   dots_indicator: ^1.2.0
   device_preview: ^0.4.5
-  connectivity: ^0.4.8+5
+  connectivity: ^1.0.0
   data_connection_checker: ^0.3.4
   cupertino_icons: ^0.1.3
   dart_countries_states: ^0.0.8
