--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   flutter_datetime_picker: ^1.3.8
   flutter_holo_date_picker: ^0.1.3+3
   flutter_platform_widgets: ^0.60.1
-  flutter_secure_storage: ^3.3.3
+  flutter_secure_storage: ^3.3.5
   keyboard_dismisser: ^1.0.2
   flutter_statusbarcolor: ^0.2.3
   flutter_svg: ^0.17.4
@@ -58,7 +58,7 @@ dependencies:
     path: lib/passid
   shared_preferences: ^0.5.7+1
   flushbar: ^1.10.4
-  #eosdart: ^0.4.6
+  eosdart: ^0.4.6
 
 flutter_icons:
   ios: true
