--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,12 @@ dependencies:
   shared_preferences: ^0.5.7+1
   flushbar: ^1.10.4
   eosdart: ^0.4.6
+  logging: ^0.11.4
+  flutter_logs: ^2.1.1
+  f_logs: ^1.2.2
+  share: ^0.6.5+4
+  flutter_cache_manager: ^2.0.0
+  open_file: ^3.0.3
 
 flutter_icons:
   ios: true
