--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   share: ^0.6.5+4
   flutter_cache_manager: ^2.0.0
   open_file: ^3.0.3
+  permission_handler: ^5.0.1+1
 
 flutter_icons:
   ios: true
