--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -27,11 +27,9 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>You should never see this, please contact us</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>You should never see this, please contact us</string>
+	<string>PassID needs permission to read log files.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-    <string>FLogs would like to save photos from the app to your gallery</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>FLogs would like to access your photo gallery for uploading images to the app</string>
+	<string>PassID needs permission to write log files.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
