--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,12 +39,9 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
 
     target.build_configurations.each do |config|
-      # You can remove unused permissions here
-      # for more infomation: https://github.com/BaseflowIT/flutter-permission-handler/blob/develop/permission_handler/ios/Classes/PermissionHandlerEnums.h
-      # e.g. when you don't need camera permission, just add 'PERMISSION_CAMERA=0'
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
         '$(inherited)',
-
         ## dart: PermissionGroup.calendar
          'PERMISSION_EVENTS=0',
 
@@ -58,17 +55,17 @@ post_install do |installer|
          'PERMISSION_CAMERA=0',
 
         ## dart: PermissionGroup.microphone
-         'PERMISSION_MICROPHONE=0',
+        'PERMISSION_MICROPHONE=0',
 
         ## dart: PermissionGroup.speech
-         'PERMISSION_SPEECH_RECOGNIZER=0',
+        'PERMISSION_SPEECH_RECOGNIZER=0',
 
         ## dart: PermissionGroup.photos
          'PERMISSION_PHOTOS=0',
 
         ## dart: [PermissionGroup.location, PermissionGroup.locationAlways, PermissionGroup.locationWhenInUse]
          'PERMISSION_LOCATION=0',
-       
+   
         ## dart: PermissionGroup.notification
          'PERMISSION_NOTIFICATIONS=0',
 
@@ -78,7 +75,6 @@ post_install do |installer|
         ## dart: PermissionGroup.sensors
          'PERMISSION_SENSORS=0'
       ]
-
     end
   end
 end
