--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,48 +25,48 @@ dependencies:
   #  git:
   #    url: git://github.com/matteocrippa/flutter-nfc-reader.git
   #    ref: master
-  bloc: ^4.0.0
-  card_settings: ^1.13.0+hotfix.1
-  dots_indicator: ^1.2.0
+  bloc: ^7.0.0
+  card_settings: ^2.0.2
+  dots_indicator: ^2.0.0
   device_preview: ^0.4.5
-  connectivity: ^1.0.0
+  connectivity: ^3.0.3
   data_connection_checker: ^0.3.4
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.2
   dart_countries_states: ^0.0.8
-  date_format: ^1.0.8
+  date_format: ^2.0.2
   passid:
     path: lib/passid
   dmrtd:
     git:
       url: https://github.com/ZeroPass/dmrtd.git
-  equatable: ^1.1.1
-  flare_flutter: ^2.0.3
+  equatable: ^2.0.0
+  flare_flutter: ^3.0.0
   http: ^0.12.1
   flutter:
     sdk: flutter
-  flutter_bloc: ^4.0.0
+  flutter_bloc: ^7.0.0
   flutter_cupertino_date_picker: ^1.0.24
   flutter_datetime_picker: ^1.3.8
-  flutter_holo_date_picker: ^0.1.3+3
-  flutter_platform_widgets: ^0.60.1
-  flutter_secure_storage: ^3.3.5
-  keyboard_dismisser: ^1.0.2
+  flutter_holo_date_picker: ^0.3.4+1
+  flutter_platform_widgets: ^1.2.0
+  flutter_secure_storage: ^4.1.0
+  keyboard_dismisser: ^2.0.0
   flutter_statusbarcolor: ^0.2.3
-  flutter_svg: ^0.17.4
+  flutter_svg: ^0.19.3
   flutter_tags: ^0.4.8
   json_serializable: ^3.3.0
-  cupertino_list_tile: ^0.1.2
+  cupertino_list_tile: ^0.2.0
   meta: ^1.1.8
   shared_preferences: ^0.5.7+1
   flushbar: ^1.10.4
   eosdart: ^0.4.7
   logging: ^0.11.4
   flutter_logs: ^2.1.1
-  f_logs: ^1.2.2
-  share: ^0.6.5+4
+  f_logs: ^2.0.0-alpha-01
+  share: ^2.0.1
   flutter_cache_manager: ^2.0.0
   open_file: ^3.0.3
-  permission_handler: ^5.0.1+1
+  permission_handler: ^6.1.3
 
 flutter_icons:
   ios: true
@@ -77,7 +77,7 @@ flutter_icons:
   adaptive_icon_foreground: "assets/images/passid_icon_foreground.png"
 
 dev_dependencies:
-  flutter_launcher_icons: "^0.7.5"
+  flutter_launcher_icons: ^0.8.1
   flutter_test:
     sdk: flutter
 
