--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,13 +60,14 @@ dependencies:
   shared_preferences: ^0.5.7+1
   flushbar: ^1.10.4
   eosdart: ^0.4.7
-  logging: ^0.11.4
+  logging: ^1.0.1
   flutter_logs: ^2.1.1
   f_logs: ^2.0.0-alpha-01
   share: ^2.0.1
   flutter_cache_manager: ^2.0.0
   open_file: ^3.0.3
   permission_handler: ^6.1.3
+  qr_code_scanner: ^0.4.0
 
 flutter_icons:
   ios: true
