--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ description: EOSIO PassID Mobile App
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   #flutter_nfc_reader:
@@ -28,20 +28,20 @@ dependencies:
   bloc: ^7.0.0
   card_settings: ^2.0.2
   dots_indicator: ^2.0.0
-  device_preview: ^0.4.5
+  #device_preview: ^0.7.3
   connectivity: ^3.0.3
   data_connection_checker: ^0.3.4
   cupertino_icons: ^1.0.2
-  dart_countries_states: ^0.0.8
+  dart_countries_states: ^0.1.1
   date_format: ^2.0.2
-  passid:
-    path: lib/passid
+  port:
+    path: lib/port
   dmrtd:
     git:
       url: https://github.com/ZeroPass/dmrtd.git
   equatable: ^2.0.0
   flare_flutter: ^3.0.0
-  http: ^0.12.1
+  http: ^0.13.0
   flutter:
     sdk: flutter
   flutter_bloc: ^7.0.0
@@ -52,22 +52,31 @@ dependencies:
   flutter_secure_storage: ^4.1.0
   keyboard_dismisser: ^2.0.0
   flutter_statusbarcolor: ^0.2.3
-  flutter_svg: ^0.19.3
+  flutter_svg: ^0.22.0
   flutter_tags: ^0.4.8
-  json_serializable: ^3.3.0
+  json_serializable: ^4.1.2
   cupertino_list_tile: ^0.2.0
   meta: ^1.1.8
-  shared_preferences: ^0.5.7+1
+  shared_preferences: ^2.0.4 #  ^0.5.7+1
   flushbar: ^1.10.4
-  eosdart: ^0.4.7
+  eosdart: ^0.4.7 #temporary commented - old sublibraries
   logging: ^1.0.1
   flutter_logs: ^2.1.1
   f_logs: ^2.0.0-alpha-01
   share: ^2.0.1
-  flutter_cache_manager: ^2.0.0
+  flutter_cache_manager: ^3.0.2 #^2.0.0
   open_file: ^3.0.3
   permission_handler: ^6.1.3
-  qr_code_scanner: ^0.4.0
+  qr_code_scanner: ^0.5.1
+
+dependency_overrides:
+  convert: ^2.0.1
+  crypto: ^2.1.5
+  eosdart_ecc: ^0.4.3
+  http: ^0.12.0+4
+  json_annotation: ^4.0.0-nullsafety.0
+  freezed_annotation: 0.13.0-nullsafety.0
+  pointycastle: ^1.0.2
 
 flutter_icons:
   ios: true
@@ -78,7 +87,7 @@ flutter_icons:
   adaptive_icon_foreground: "assets/images/passid_icon_foreground.png"
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.8.1
+  flutter_launcher_icons: ^0.9.0
   flutter_test:
     sdk: flutter
 
