migration on new flutter version

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>PassID</string>
+	<string>Port</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
