--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: eosio_passid_mobile_app
-description: EOSIO PassID Mobile App
+description: Port Mobile App
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
