--- a/.gitmodules
+++ b/.gitmodules
@@ -1,2 +1,4 @@
 [submodule "lib/passid"]
 	url = https://github.com/ZeroPass/flutter-port-sdk.git
+[submodule "lib/port"]
+	url = https://github.com/ZeroPass/flutter-port-sdk.git
