--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '9.0'
+ platform :ios, '13.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -51,9 +51,6 @@ post_install do |installer|
         ## dart: PermissionGroup.contacts
          'PERMISSION_CONTACTS=0',
 
-        ## dart: PermissionGroup.camera
-         'PERMISSION_CAMERA=0',
-
         ## dart: PermissionGroup.microphone
         'PERMISSION_MICROPHONE=0',
 
@@ -65,7 +62,7 @@ post_install do |installer|
 
         ## dart: [PermissionGroup.location, PermissionGroup.locationAlways, PermissionGroup.locationWhenInUse]
          'PERMISSION_LOCATION=0',
-   
+
         ## dart: PermissionGroup.notification
          'PERMISSION_NOTIFICATIONS=0',
 
@@ -73,7 +70,10 @@ post_install do |installer|
          'PERMISSION_MEDIA_LIBRARY=0',
 
         ## dart: PermissionGroup.sensors
-         'PERMISSION_SENSORS=0'
+         'PERMISSION_SENSORS=0',
+
+        ## dart: PermissionGroup.bluetooth
+         'PERMISSION_BLUETOOTH=0'
       ]
     end
   end
