--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -24,10 +24,16 @@
 	<true/>
 	<key>NFCReaderUsageDescription</key>
 	<string>App uses NFC to scan biometric passport</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>You shouldn&apos;t see this because app doesn&apos;t use bluetooth.</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>You shouldn&apos;t see this because app doesn&apos;t use bluetooth.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>App uses camera to scan QR code.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>PassID needs permission to write log files.</string>
+	<string>App needs permission to write log files.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>PassID needs permission to read log files.</string>
+	<string>App uses camera to scan QR code.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
