--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -42,6 +42,16 @@
             </intent-filter>
 
 
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="portapp.page.link" />
+            </intent-filter>
+
 
             <intent-filter>
                 <action android:name="android.nfc.action.TECH_DISCOVERED" />
