--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -142,6 +142,7 @@ flutter:
     - assets/images/port_icon.png
     - assets/images/port_icon_background.png
     - assets/images/port_icon_foreground.png
+    - assets/images/port.link.logo.text.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
