--- a/lib/dmrtd/pubspec.yaml
+++ b/lib/dmrtd/pubspec.yaml
@@ -21,4 +21,4 @@ dev_dependencies:
     sdk: flutter
   flutter_test: # needed for flutter_nfc_kit
     sdk: flutter
-  test: ^1.16.5flutter pub oui
+  test: ^1.16.5
