--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   flutter_bloc: ^7.0.0
   flutter_cupertino_date_picker: ^1.0.24
   flutter_datetime_picker: ^1.3.8
-  flutter_holo_date_picker: ^0.3.4+1
+  flutter_holo_date_picker: ^1.0.0-nullsafety.4
   flutter_platform_widgets: ^1.2.0
   flutter_secure_storage: ^4.2.0
   keyboard_dismisser: ^2.0.0
