minor cosmetic updates

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,10 +84,10 @@ dependency_overrides:
 flutter_icons:
   ios: true
   android: true
-  image_path_ios: "assets/images/passid_icon.png"
-  image_path_android: "assets/images/passid_icon.png"
-  adaptive_icon_background: "assets/images/passid_icon_background.png"
-  adaptive_icon_foreground: "assets/images/passid_icon_foreground.png"
+  image_path_ios: "assets/images/port_icon.png"
+  image_path_android: "assets/images/port_icon.png"
+  adaptive_icon_background: "assets/images/port_icon_background.png"
+  adaptive_icon_foreground: "assets/images/port_icon_foreground.png"
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
