--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,12 +13,12 @@ if (flutterRoot == null) {
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
+    flutterVersionCode = '0.7'
 }
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
-    flutterVersionName = '1.0'
+    flutterVersionName = '0.7'
 }
 
 apply plugin: 'com.android.application'
@@ -26,7 +26,27 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
+    signingConfigs {
+        debug {
+            storeFile file('C:\\Data\\Credentials\\googleKeyStore\\portKey.jks')
+            keyAlias 'upload'
+            storePassword 'mqmEcSKYNJ3sENY949rktQeYh'
+            keyPassword 'mqmEcSKYNJ3sENY949rktQeYh'
+        }
+        release {
+            storePassword 'mqmEcSKYNJ3sENY949rktQeYh'
+            keyPassword 'mqmEcSKYNJ3sENY949rktQeYh'
+            keyAlias 'upload'
+            storeFile file('C:\\Data\\Credentials\\googleKeyStore\\portKey.jks')
+        }
+    }
     compileSdkVersion 30
 
     sourceSets {
@@ -44,17 +64,23 @@ android {
         minSdkVersion 20
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
 
         // Enabling multidex support.
         multiDexEnabled true
+        signingConfig signingConfigs.release
     }
 
+    signingConfigs {
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']
+        }
+    }
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
