--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ description: Port Mobile App
 # This version is used _only_ for the Runner app, which is used if you just do
 # a `flutter run` or a `flutter make-host-app-editable`. It has no impact
 # on any other native host app that you embed your Flutter project into.
-version: 1.0.0+1
+version: 0.7.0+2
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -51,7 +51,7 @@ dependencies:
   flutter_platform_widgets: ^1.2.0
   flutter_secure_storage: ^4.2.0
   keyboard_dismisser: ^2.0.0
-  flutter_statusbarcolor: ^0.2.3
+  #flutter_statusbarcolor: ^0.2.3
   flutter_svg: ^0.22.0
   flutter_tags: ^0.4.8
   json_serializable: ^4.1.2
