--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,8 @@ dependencies:
   #  git:
   #    url: git://github.com/matteocrippa/flutter-nfc-reader.git
   #    ref: master
-  bloc: ^7.0.0
-  card_settings: ^2.0.3
+  bloc: ^8.0.0
+  card_settings: ^3.0.0
   dots_indicator: ^2.0.0
   #device_preview: ^0.7.3
   connectivity: ^3.0.3
@@ -44,17 +44,17 @@ dependencies:
   http: ^0.13.0
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.0.0
+  flutter_bloc: ^8.0.0
   flutter_cupertino_date_picker: ^1.0.24
   flutter_datetime_picker: ^1.3.8
   flutter_holo_date_picker: ^1.0.0-nullsafety.4
   flutter_platform_widgets: ^1.2.0
-  flutter_secure_storage: ^4.2.0
+  flutter_secure_storage: ^5.0.2
   keyboard_dismisser: ^2.0.0
   #flutter_statusbarcolor: ^0.2.3
-  flutter_svg: ^0.22.0
+  flutter_svg: ^0.23.0+1
   flutter_tags: ^0.4.8
-  json_serializable: ^4.1.2
+  json_serializable: ^6.0.1
   cupertino_list_tile: ^0.2.0
   meta: ^1.1.8
   shared_preferences: ^2.0.4 #  ^0.5.7+1
@@ -66,10 +66,10 @@ dependencies:
   share: ^2.0.1
   flutter_cache_manager: ^3.0.2 #^2.0.0
   open_file: ^3.0.3
-  permission_handler: ^6.1.3
-  qr_code_scanner: ^0.5.1
+  permission_handler: ^8.3.0
+  qr_code_scanner: ^0.6.1
   eosdart_ecc: ^0.4.3
-  firebase_dynamic_links: ^2.0.7
+  firebase_dynamic_links: ^3.0.1
   rive: ^0.7.22
 
 dependency_overrides:
