--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   #  git:
   #    url: git://github.com/matteocrippa/flutter-nfc-reader.git
   #    ref: master
-  bloc: ^8.0.0
+  bloc: 7.1.0
   card_settings: ^3.0.0
   dots_indicator: ^2.0.0
   #device_preview: ^0.7.3
@@ -44,7 +44,7 @@ dependencies:
   http: ^0.13.0
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.0
+  flutter_bloc: 7.1.0
   flutter_cupertino_date_picker: ^1.0.24
   flutter_datetime_picker: ^1.3.8
   flutter_holo_date_picker: ^1.0.0-nullsafety.4
