--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   eosdart_ecc: ^0.4.3
   firebase_dynamic_links: ^3.0.1
   rive: ^0.7.22
+  package_info_plus: ^1.3.0
 
 dependency_overrides:
   convert: ^2.0.1
