--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   cupertino_list_tile: ^0.2.0
   meta: ^1.1.8
   shared_preferences: ^2.0.4 #  ^0.5.7+1
-  flushbar: ^1.10.4
+  another_flushbar: ^1.10.28
   eosdart: ^0.4.7 #temporary commented - old sublibraries
   logging: ^1.0.1
   flutter_logs: ^2.1.1
