--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   #  git:
   #    url: git://github.com/matteocrippa/flutter-nfc-reader.git
   #    ref: master
-  bloc: 7.1.0
+  bloc: ^8.0.2
   card_settings: ^3.0.0
   dots_indicator: ^2.0.0
   #device_preview: ^0.7.3
@@ -41,10 +41,10 @@ dependencies:
       url: https://github.com/ZeroPass/dmrtd.git
   equatable: ^2.0.0
   flare_flutter: ^3.0.2
-  http: ^0.13.0
+  http: ^0.13.4
   flutter:
     sdk: flutter
-  flutter_bloc: 7.1.0
+  flutter_bloc: ^8.0.1
   flutter_cupertino_date_picker: ^1.0.24
   flutter_datetime_picker: ^1.3.8
   flutter_holo_date_picker: ^1.0.0-nullsafety.4
@@ -52,7 +52,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   keyboard_dismisser: ^2.0.0
   #flutter_statusbarcolor: ^0.2.3
-  flutter_svg: ^0.23.0+1
+  flutter_svg: ^1.0.0
   flutter_tags: ^0.4.8
   json_serializable: ^6.0.1
   cupertino_list_tile: ^0.2.0
@@ -69,8 +69,8 @@ dependencies:
   permission_handler: ^8.3.0
   qr_code_scanner: ^0.6.1
   eosdart_ecc: ^0.4.3
-  firebase_dynamic_links: ^3.0.1
-  rive: ^0.7.22
+  firebase_dynamic_links: ^4.0.3
+  rive: ^0.8.1
   package_info_plus: ^1.3.0
 
 dependency_overrides:
