--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,6 +59,9 @@ android {
     }
 
     defaultConfig {
+        configurations.all {
+            resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
+        }
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "io.zeropass.port"
         minSdkVersion 20
@@ -90,10 +93,21 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //def work_version = "2.6.0"
+    // Force WorkManager 2.6.0 for transitive dependency
+    //implementation("androidx.work:work-runtime-ktx:$work_version") {
+    //    force = true
+    //}
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:28.2.1')
     implementation 'com.google.firebase:firebase-dynamic-links'
     implementation 'com.google.firebase:firebase-analytics'
 }
 
+//configurations.all {
+//    resolutionStrategy {
+//        force 'androidx.core:core-ktx:1.6.0'
+//    }
+//}
 
