--- a/lib/dmrtd/pubspec.yaml
+++ b/lib/dmrtd/pubspec.yaml
@@ -1,17 +1,19 @@
 name: dmrtd
 description: Dart implementation of ICAO Doc 9303 MRTD, created by ZeroPass
 
-version: 1.1.0
+version: 1.2.0
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.14.1 <3.0.0'
 
 dependencies:
   archive: ^3.1.2
   convert: ^3.0.0
   crypto: ^3.0.1
   fixnum: ^1.0.0
-  flutter_nfc_kit: '2.2.1'
+  flutter_nfc_kit:
+    git:
+      url: https://github.com/ZeroPass/flutter_nfc_kit.git
   logging: ^1.0.1
   meta: ^1.3.0
   tripledes: ^2.1.0
