--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   dots_indicator: ^2.0.0
   #device_preview: ^0.7.3
   connectivity: ^3.0.3
-  data_connection_checker: ^0.3.4
+  data_connection_checker_tv: ^0.3.5-nullsafety
   cupertino_icons: ^1.0.2
   dart_countries_states: ^0.1.1
   date_format: ^2.0.2
@@ -46,7 +46,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
-  flutter_cupertino_date_picker: ^1.0.24
   flutter_datetime_picker: ^1.3.8
   flutter_holo_date_picker: ^1.0.0-nullsafety.4
   flutter_platform_widgets: ^1.2.0
@@ -54,7 +53,6 @@ dependencies:
   keyboard_dismisser: ^2.0.0
   #flutter_statusbarcolor: ^0.2.3
   flutter_svg: ^1.0.1
-  flutter_tags: ^0.4.8
   json_serializable: ^6.1.4
   cupertino_list_tile: ^0.2.0
   meta: ^1.1.8
