--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,9 +93,9 @@ flutter {
 }
 
 dependencies {
-    //def work_version = "2.6.0"
+    def work_version = "2.7.0"
     // Force WorkManager 2.6.0 for transitive dependency
-    //implementation("androidx.work:work-runtime-ktx:$work_version") {
+    implementation("androidx.work:work-runtime-ktx:$work_version")
     //    force = true
     //}
     //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
