--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   dmrtd:
     git:
       url: https://github.com/ZeroPass/dmrtd.git
-      ref: v1.2.2.TMP
+      #ref: v1.2.2.TMP
   equatable: ^2.0.0
   flare_flutter: ^3.0.2
   http: ^0.13.4
@@ -58,7 +58,7 @@ dependencies:
   meta: ^1.1.8
   shared_preferences: ^2.0.4 #  ^0.5.7+1
   another_flushbar: ^1.10.28
-  eosdart: ^0.4.7 #temporary commented - old sublibraries
+  eosdart: ^0.4.8 #temporary commented - old sublibraries
   logging: ^1.0.1
   flutter_logs: ^2.1.5
   f_logs: ^2.0.0-alpha-01
@@ -68,14 +68,11 @@ dependencies:
   permission_handler: ^8.3.0
   qr_code_scanner: ^0.6.1
   eosdart_ecc: ^0.4.3
-  firebase_dynamic_links: ^4.0.3
+  firebase_dynamic_links: ^4.0.8
   rive: ^0.8.1
   package_info_plus: ^1.3.0
 
 dependency_overrides:
-  http: ^0.12.0+4
-  json_annotation: ^4.0.0-nullsafety.0
-  pointycastle: ^3.1.1
   flutter_nfc_kit:
     git:
       url: https://github.com/ZeroPass/flutter_nfc_kit.git
