Added deep logging, also implemented some cosmetic changes..

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,8 @@ dependencies:
   eosdart_ecc: ^0.4.3
   firebase_dynamic_links: ^4.0.8
   rive: ^0.8.1
-  package_info_plus: ^1.3.0
+  package_info_plus: ^1.4.1
+  #flutter_nfc_kit: ^3.2.0
 
 dependency_overrides:
   flutter_nfc_kit:
