migration on flutter 3

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,11 @@ version: 1.2.0+1
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
-dependency_overrides: 
-  flutter_nfc_kit:
+dependency_overrides:
+  qr_code_scanner: #just temporary, because of fast migration on flutter 3. Remove git include(in overrides section) after official library developer accept PR.
     git:
-      url: https://github.com/ZeroPass/flutter_nfc_kit.git
+      url: https://github.com/X-SLAYER/qr_code_scanner.git
+      ref: flutter-beta
 
 dependencies:
   bloc: ^8.0.2
@@ -40,7 +41,6 @@ dependencies:
       url: https://github.com/ZeroPass/flutter-port-sdk.git
       ref: v1.3.1 
   equatable: ^2.0.0
-  flare_flutter: ^3.0.2
   http: ^0.13.4
   flutter:
     sdk: flutter
@@ -49,7 +49,7 @@ dependencies:
   flutter_holo_date_picker: ^1.0.0-nullsafety.4
   flutter_platform_widgets: ^1.2.0
   flutter_secure_storage: ^5.0.2
-  keyboard_dismisser: ^2.0.0
+  keyboard_dismisser: ^3.0.0
   flutter_svg: ^1.0.1
   json_serializable: ^6.1.4
   cupertino_list_tile: ^0.2.0
@@ -58,17 +58,17 @@ dependencies:
   another_flushbar: ^1.10.28
   eosdart: ^0.4.8
   logging: ^1.0.1
-  flutter_logs: ^2.1.5
   f_logs: ^2.0.0-alpha-01
   share: ^2.0.1
   flutter_cache_manager: ^3.0.2
   open_file: ^3.0.3
   permission_handler: ^8.3.0
-  qr_code_scanner: ^0.6.1
+  #qr_code_scanner: ^0.0.0 //install from here after accepted PR
   eosdart_ecc: ^0.4.3
-  firebase_dynamic_links: ^4.0.8
+  firebase_dynamic_links: ^4.2.4
   rive: ^0.8.1
   package_info_plus: ^1.4.1
+  flutter_nfc_kit: ^3.3.1
 
 flutter_icons:
   ios: true
