--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,22 +15,23 @@ description: Port Mobile App
 # This version is used _only_ for the Runner app, which is used if you just do
 # a `flutter run` or a `flutter make-host-app-editable`. It has no impact
 # on any other native host app that you embed your Flutter project into.
-version: 1.2.0+1
+version: 1.2.3+14
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
-dependency_overrides: 
-  flutter_nfc_kit:
-    git:
-      url: https://github.com/ZeroPass/flutter_nfc_kit.git
+dependency_overrides:
+  meta: ^1.7.0
+  flutter_nfc_kit: ^3.3.1
+    #git:
+    # url: https://github.com/ZeroPass/flutter_nfc_kit.git
 
 dependencies:
   bloc: ^8.0.2
   card_settings: ^3.0.0
   dots_indicator: ^2.0.0
   #device_preview: ^0.7.3
-  connectivity: ^3.0.3
+  connectivity_plus: ^3.0.0
   data_connection_checker_tv: ^0.3.5-nullsafety
   cupertino_icons: ^1.0.2
   dart_countries_states: ^0.1.1
@@ -38,7 +39,7 @@ dependencies:
   port:
     git:
       url: https://github.com/ZeroPass/flutter-port-sdk.git
-      ref: v1.3.1 
+      #ref: v1.3.1
   equatable: ^2.0.0
   flare_flutter: ^3.0.2
   http: ^0.13.4
@@ -47,13 +48,12 @@ dependencies:
   flutter_bloc: ^8.0.1
   flutter_datetime_picker: ^1.3.8
   flutter_holo_date_picker: ^1.0.0-nullsafety.4
-  flutter_platform_widgets: ^1.2.0
-  flutter_secure_storage: ^5.0.2
+  flutter_platform_widgets: ^3.3.5
+  flutter_secure_storage: ^8.0.0
   keyboard_dismisser: ^2.0.0
   flutter_svg: ^1.0.1
   json_serializable: ^6.1.4
   cupertino_list_tile: ^0.2.0
-  meta: ^1.1.8
   shared_preferences: ^2.0.4
   another_flushbar: ^1.10.28
   eosdart: ^0.4.8
@@ -62,13 +62,13 @@ dependencies:
   f_logs: ^2.0.0-alpha-01
   share: ^2.0.1
   flutter_cache_manager: ^3.0.2
-  open_file: ^3.0.3
+  open_file_safe_plus: ^0.0.3
   permission_handler: ^8.3.0
-  qr_code_scanner: ^0.6.1
+  qr_code_scanner: ^1.0.1
   eosdart_ecc: ^0.4.3
-  firebase_dynamic_links: ^4.0.8
+  firebase_dynamic_links: ^5.3.5
   rive: ^0.8.1
-  package_info_plus: ^1.4.1
+  #package_info_plus: ^4.1.0
 
 flutter_icons:
   ios: true
